# Private-RAG-Agent

./: .env.example  .gitignore  .importlinter  100万级企业知识Agent系统_最终整合版.md  CLAUDE.md  README.md  generate_eval_dataset.py  pyproject.toml
.github/workflows/: ci.yml
agent_runtime/: __init__.py  agent.py  knowledge.py  local_runtime.py  models.py  planning.py  result.py
agent_runtime/knowledge_providers/: __init__.py  rag.py
agent_runtime/runtime/: __init__.py  builder.py  mcp.py
configs/: mcp_servers.yaml  models.yaml
docs/: EVALUATION.md  RUNBOOK.md  TROUBLESHOOTING.md  agent_naming.md
docs/design/: agent_api_rearchitecture.md  agent_product_contract.md  agent_product_dogfood_plan.md
evals/code_agent/: benchmark_v1.json
evals/model_quality/: baseline_v1.json
rag/: __init__.py  benchmarks.py  cli.py  embedding_service.py  query_pipeline.py  rerank_service.py  runtime.py
rag/agent/: __init__.py  binding_providers.py  builtin_registry.py  cli.py  critic.py  executor.py  file_manifest.py  goal_runtime.py  models.yaml  planner.py  planning.py  primitive_ops.py  report.py  schema.py  service.py  sessions.py  state.py  synthesizer.py  turns.py  understanding.py  workspace.py
rag/assembly/: __init__.py  bindings.py  models.py  service.py  support.py  tokenizer.py
scripts/: agent_cli_smoke.py  agent_code_benchmark.py  agent_delivery_smoke.py  agent_model_quality_gate.py  agent_session_smoke.py  agent_tool_aci_eval.py  check_anti_patterns.py  demo_llm_agent.py  diagnose_ingest_timing.py  evaluate_private_retrieval.py  export_private_sections.py  ingest_private_documents.py  ingest_public_benchmark.py  profile_benchmark_ingest.py  run_benchmark_ingest.sh
tests/: support.py  test_tool_discovery.py  verify_summary_mlx.py
(+432 files in other folders)
