[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "rag"
version = "0.1.0"
description = "Core RAG library with graph-aware retrieval and multimodal indexing."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "boto3>=1.40.0",
  "beautifulsoup4>=4.13.3",
  "docling>=2.82.0",
  "duckdb>=1.2.0",
  "flagembedding>=1.3.5",
  "hf-transfer>=0.1.9",
  "httpx>=0.28.1",
  "huggingface-hub>=0.36.2",
  "neo4j>=5.28.2",
  "openai>=1.72.0",
  "openpyxl>=3.1.5",
  "pillow>=11.2.1",
  "psycopg[binary]>=3.2.9",
  "pymilvus>=2.6.0",
  "pydantic>=2.11.0",
  "pymupdf>=1.26.0",
  "python-docx>=1.2.0",
  "redis>=6.4.0",
  "tiktoken>=0.9.0",
  "transformers>=4.57.6",
  "typer>=0.15.2",
  "pyyaml>=6.0.2",
  "mlx-lm>=0.31.2",
  "langgraph>=1.1.8",
  "mcp>=1.27.0",
  "langchain-openai>=1.2.1",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "fastapi>=0.136.1",
  "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[project.scripts]
rag = "rag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["."]
strict = true
warn_unused_configs = true
packages = ["rag"]

[[tool.mypy.overrides]]
module = [
  "boto3",
  "datasets",
  "ocrmac",
  "openpyxl",
  "openpyxl.*",
  "pandas",
  "pymilvus",
  "tqdm",
  "tqdm.*",
  "yaml",
]
ignore_missing_imports = true

[tool.uv]
default-groups = ["dev"]
